feature: get plans endpoint
